// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`view of cloud 1`] = `
{
  "edges": [
    {
      "id": "cloud.frontend:cloud.backend",
      "label": null,
      "parent": "cloud",
      "relations": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "source": "cloud.frontend",
      "target": "cloud.backend",
    },
    {
      "id": "cloud.backend:amazon",
      "label": null,
      "parent": null,
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud.backend",
      "target": "amazon",
    },
    {
      "id": "support:cloud.frontend",
      "label": null,
      "parent": null,
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud.frontend",
    },
    {
      "id": "customer:cloud.frontend",
      "label": null,
      "parent": null,
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud.frontend",
    },
  ],
  "id": "cloud",
  "nodes": [
    {
      "children": [],
      "color": "primary",
      "id": "support",
      "parent": null,
      "shape": "rectangle",
      "title": "support",
    },
    {
      "children": [],
      "color": "primary",
      "id": "customer",
      "parent": null,
      "shape": "rectangle",
      "title": "customer",
    },
    {
      "children": [
        "cloud.frontend",
        "cloud.backend",
      ],
      "color": "primary",
      "id": "cloud",
      "navigateTo": "fakeView",
      "parent": null,
      "shape": "rectangle",
      "title": "cloud",
    },
    {
      "children": [],
      "color": "primary",
      "id": "cloud.frontend",
      "parent": "cloud",
      "shape": "rectangle",
      "title": "frontend",
    },
    {
      "children": [],
      "color": "primary",
      "id": "cloud.backend",
      "parent": "cloud",
      "shape": "rectangle",
      "title": "backend",
    },
    {
      "children": [],
      "color": "primary",
      "id": "amazon",
      "parent": null,
      "shape": "rectangle",
      "title": "amazon",
    },
  ],
  "rules": [
    {
      "exprs": [
        {
          "wildcard": true,
        },
      ],
      "isInclude": true,
    },
  ],
  "title": "",
  "viewOf": "cloud",
}
`;

exports[`view with 3 levels 1`] = `
{
  "edges": [
    {
      "id": "cloud.frontend.dashboard:cloud.backend.graphql",
      "label": null,
      "parent": "cloud",
      "relations": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
      ],
      "source": "cloud.frontend.dashboard",
      "target": "cloud.backend.graphql",
    },
    {
      "id": "cloud.frontend.adminPanel:cloud.backend.graphql",
      "label": null,
      "parent": "cloud",
      "relations": [
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "source": "cloud.frontend.adminPanel",
      "target": "cloud.backend.graphql",
    },
    {
      "id": "cloud.backend.storage:amazon",
      "label": null,
      "parent": null,
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud.backend.storage",
      "target": "amazon",
    },
    {
      "id": "cloud.backend.graphql:cloud.backend.storage",
      "label": null,
      "parent": "cloud.backend",
      "relations": [
        "cloud.backend.graphql:cloud.backend.storage",
      ],
      "source": "cloud.backend.graphql",
      "target": "cloud.backend.storage",
    },
    {
      "id": "support:cloud.frontend.adminPanel",
      "label": null,
      "parent": null,
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud.frontend.adminPanel",
    },
    {
      "id": "customer:cloud.frontend.dashboard",
      "label": null,
      "parent": null,
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud.frontend.dashboard",
    },
  ],
  "id": "cloud3levels",
  "nodes": [
    {
      "children": [],
      "color": "primary",
      "id": "support",
      "parent": null,
      "shape": "rectangle",
      "title": "support",
    },
    {
      "children": [],
      "color": "primary",
      "id": "customer",
      "parent": null,
      "shape": "rectangle",
      "title": "customer",
    },
    {
      "children": [
        "cloud.frontend.dashboard",
        "cloud.frontend.adminPanel",
        "cloud.backend",
      ],
      "color": "primary",
      "id": "cloud",
      "navigateTo": "fakeView",
      "parent": null,
      "shape": "rectangle",
      "title": "cloud",
    },
    {
      "children": [],
      "color": "primary",
      "id": "cloud.frontend.dashboard",
      "parent": "cloud",
      "shape": "rectangle",
      "title": "dashboard",
    },
    {
      "children": [],
      "color": "primary",
      "id": "cloud.frontend.adminPanel",
      "parent": "cloud",
      "shape": "rectangle",
      "title": "adminPanel",
    },
    {
      "children": [
        "cloud.backend.graphql",
        "cloud.backend.storage",
      ],
      "color": "primary",
      "id": "cloud.backend",
      "parent": "cloud",
      "shape": "rectangle",
      "title": "backend",
    },
    {
      "children": [],
      "color": "primary",
      "id": "cloud.backend.graphql",
      "parent": "cloud.backend",
      "shape": "rectangle",
      "title": "graphql",
    },
    {
      "children": [],
      "color": "primary",
      "id": "cloud.backend.storage",
      "parent": "cloud.backend",
      "shape": "rectangle",
      "title": "storage",
    },
    {
      "children": [],
      "color": "primary",
      "id": "amazon",
      "parent": null,
      "shape": "rectangle",
      "title": "amazon",
    },
  ],
  "rules": [
    {
      "exprs": [
        {
          "wildcard": true,
        },
        {
          "element": "cloud.frontend",
          "isDescedants": true,
        },
        {
          "element": "cloud.backend",
          "isDescedants": true,
        },
      ],
      "isInclude": true,
    },
    {
      "exprs": [
        {
          "element": "cloud.frontend",
          "isDescedants": false,
        },
      ],
      "isInclude": false,
    },
  ],
  "title": "",
  "viewOf": "cloud",
}
`;
